src/objects/GBS_Document_Link__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Global Business Services - link to documents stored on STIR</description>
    <fields>
        <fullName>Document_URL__c</fullName>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <label>File</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>GBS Document Link</label>
    <pluralLabel>GBS Document Links</pluralLabel>
</CustomObject>